[package]
name = "cbc4-wasm"
version = "0.1.0"
authors = ["Philippe Dugre <philippe.dugre@polymtl.ca>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.25"
wasm-bindgen = { version = "0.2.33", features = ["serde-serialize"] }
js-sys = "0.3.10"
wasm-bindgen-futures = "0.3.10"
base64 = "0.10.1"
x25519-dalek = "0.4.4"
aes = "0.3.2"
block-modes = "0.3.1"
rand = { version = "0.6.4", features = ["wasm-bindgen"] }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "1.0.37"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'EventTarget',
  'MouseEvent',
  'Headers',
  'Request',
  'RequestInit',
  'Response',
  'Document',
  'Element',
  'HtmlElement',
  'HtmlInputElement',
  'Node',
  'Window',
]